<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherSearch"
    android:background="#286ADB"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <TextView
        android:id="@+id/header_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="25sp"
        android:text="@string/start"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/input_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_marginTop="43dp"
        android:hint="@string/enter_city"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        tools:visibility="invisible"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/input_lat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_marginTop="43dp"
        android:hint="@string/enter_latitude"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        tools:visibility="invisible"
        android:inputType="numberDecimal|numberSigned"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/input_long"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="88dp"
        android:gravity="center"
        android:hint="@string/enter_longitude"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:visibility="invisible"
        android:inputType="numberDecimal|numberSigned"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/input_zip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_marginTop="43dp"
        android:hint="@string/enter_zip_code"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        tools:visibility="invisible"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/input_country_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="88dp"
        android:gravity="center"
        android:hint="@string/enter_country_code"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:visibility="invisible"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/input_cnt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="139dp"
        android:gravity="center"
        android:hint="@string/enter_cnt_number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:visibility="invisible"
        android:inputType="numberDecimal"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/get_weather_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="182dp"
        android:backgroundTint="#0E1E2D"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/get_weather_report" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="260dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_city"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/main_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:text=""/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>